# public/docs/openapi.yaml
@@ -83,7 +83,7 @@ paths:
                 activity_id:
                   type: integer
                   description: ''
-                  example: 7
+                  example: 8
               required:
                 - activity_id
       security: []
@@ -106,11 +106,11 @@ paths:
                 phone:
                   type: string
                   description: 'The phone number of the user.'
-                  example: aut
+                  example: provident
                 password:
                   type: string
                   description: 'The password of the user.'
-                  example: 'J9Rg7wi!Ne^Z[?|'
+                  example: OMeLRR;Y9QnQ!-u
               required:
                 - phone
                 - password
@@ -134,11 +134,11 @@ paths:
                 name:
                   type: string
                   description: 'The phone number of the user.'
-                  example: nemo
+                  example: eius
                 phone:
                   type: string
                   description: 'The password of the user.'
-                  example: accusantium
+                  example: quaerat
               required:
                 - name
                 - phone
@@ -162,7 +162,7 @@ paths:
                 phone:
                   type: string
                   description: 'The phone number of the user.'
-                  example: alias
+                  example: cum
               required:
                 - phone
       security: []
@@ -185,7 +185,7 @@ paths:
                 code:
                   type: string
                   description: 'The phone number of the user.'
-                  example: id
+                  example: ab
               required:
                 - code
       security: []
@@ -260,7 +260,7 @@ paths:
                 blog_id:
                   type: integer
                   description: ''
-                  example: 15
+                  example: 12
               required:
                 - blog_id
       security: []
@@ -965,7 +965,7 @@ paths:
                 city_id:
                   type: integer
                   description: ''
-                  example: 10
+                  example: 2
               required:
                 - city_id
       security: []
@@ -1227,11 +1227,11 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: nihil
+                  example: unde
                 phone:
                   type: string
                   description: ''
-                  example: nam
+                  example: culpa
               required:
                 - name
                 - phone
@@ -1262,7 +1262,7 @@ paths:
                 password:
                   type: string
                   description: ''
-                  example: ';g=C]frGe'
+                  example: '{_mhs,E*b5"8|'
               required:
                 - password
       security: []
@@ -1282,6 +1282,56 @@ paths:
       responses: {  }
       tags:
         - 'Customer (Update)'
+      security: []
+  /api/salons/all:
+    get:
+      summary: ''
+      operationId: getApiSalonsAll
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  salons:
+                    -
+                      name: 'Muhammet Türkmen'
+                      icon: null
+                      color: null
+                    -
+                      name: 'Furkan Studyo'
+                      icon: null
+                      color: null
+                properties:
+                  salons:
+                    type: array
+                    example:
+                      -
+                        name: 'Muhammet Türkmen'
+                        icon: null
+                        color: null
+                      -
+                        name: 'Furkan Studyo'
+                        icon: null
+                        color: null
+                    items:
+                      type: object
+                      properties:
+                        name:
+                          type: string
+                          example: 'Muhammet Türkmen'
+                        icon:
+                          type: string
+                          example: null
+                        color:
+                          type: string
+                          example: null
+      tags:
+        - 'Salon List'
       security: []
   /api/salons/list:
     get:
@@ -1391,22 +1441,22 @@ paths:
           in: query
           name: service_id
           description: ''
-          example: totam
+          example: velit
           required: false
           schema:
             type: string
             description: ''
-            example: totam
+            example: velit
         -
           in: query
           name: city_id
           description: ''
-          example: odit
+          example: ipsum
           required: false
           schema:
             type: string
             description: ''
-            example: odit
+            example: ipsum
       responses: {  }
       tags:
         - Search
@@ -1421,22 +1471,22 @@ paths:
           in: query
           name: category_id
           description: ''
-          example: ut
+          example: assumenda
           required: false
           schema:
             type: string
             description: ''
-            example: ut
+            example: assumenda
         -
           in: query
           name: city_id
           description: ''
-          example: ipsam
+          example: aperiam
           required: false
           schema:
             type: string
             description: ''
-            example: ipsam
+            example: aperiam
       responses: {  }
       tags:
         - Search
@@ -1460,7 +1510,7 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: optio
+                  example: voluptatem
       security: []
   /api/services/list:
     get:
@@ -1664,6 +1714,9 @@ tags:
     description: ''
   -
     name: 'Customer (Update)'
+    description: ''
+  -
+    name: 'Salon List'
     description: ''
   -
     name: 'Salon Type'
